--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Document</title>
+	<title>repo</title>
 </head>
 <body>
 	<p>Please view this repo on a jailbroken device with the supported package managers, thanks.</p>
+	<p>https://blocksmobile.github.io/repo</p>
 </body>
 </html>
